--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ margin: 0 auto;
 }
 .heading h2{
     font-family: 'Raleway', sans-serif;
-    font-size: 50px;
+    font-size: 60px;
     padding: 20px 0;
     font-weight: bold;
     text-transform: uppercase;
@@ -349,7 +349,7 @@ padding-left: 15%}
   } 
   .para{
       font-size: 30px;
-      padding: 0;
+      padding: 0 0 20px 0;
   }
   .banner a{
       padding: 10px;
@@ -424,12 +424,13 @@ padding: 0 5px 10px 10px;
         font-size: 25px;
     }
     .para{
-        font-size: 30px;
+        font-size: 35px;
         color: white;
+        font-weight: 800;
         padding-bottom: 40px;
     }
     .box-bg img{
-        height: 460px;
+        height: 420px;
         width: 600px;
         margin: 0 auto;
     }
@@ -439,6 +440,9 @@ padding: 0 5px 10px 10px;
     .heading h2{
         font-size: 80px;
         font-weight: bold;
+    }
+    .abst-img{
+padding: 0;
     }
     .heading p{
         font-size: 35px;
